# face-detection-program

./: .gitignore  README.md  tools.sh
hardware/: Cargo.toml  memory.x
hardware/.cargo/: config
hardware/examples/: main.rs
image_processing/: pyproject.toml
image_processing/image_processing/: bot.py  bouncy_rectangle.py  color-channeling.py  contours.py  detector.py  face-detection.py  hsv.py  masking.py
