[package]
name = "pico_control"
version = "0.1.0"
authors = ["Ro Sharaf"]
edition = "2021"
homepage = ""
description = "Board Support Package Funnel Cake Raspberry Pi Pico"
license = "Apache-2.0"
repository = "pico_control"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.3.0"
embedded-hal = "0.2.7"
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = "0.4.0"
cortex-m-rt = { version = "0.7", optional = true }
embedded-time = "0.12.0"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
futures = { version = "0.3", default-features = false, optional = true }
heapless = "0.7.9"
cobs = { version = "0.1.4", default-features = false }
postcard = "0.7.2"
postcard-cobs = { version = "0.2.0", default-features = false }
serde = { version = "1.0.*", default-features = false }

[dev-dependencies]
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
cortex-m-rtic = "0.6.0-rc.4"
nb = "1.0"
i2c-pio = { git = "https://github.com/ithinuel/i2c-pio-rs", rev = "fa155bbae4e8553b448a66cc47236db38b7524dd" }
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
smart-leds = "0.3.0"
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "fd6b6604d65a66242b52ccf7f24a95ca325991dd" }
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"

defmt = "0.2.0"
defmt-rtt = "0.2.0"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]

[dependencies.rtt-target]
version = "0.2.0"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1.0"
features = ["cortex-m"]


