[tool.poetry]
name = "image_processing"
version = "0.1.0"
description = ""
authors = ["Parham <parham2002sh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0"
matplotlib = "^3.5.2"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
